gke/deployment-db/ingress-scgrp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-scgrp
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: mongo-express-service
            port:
              number: 30000
      - path: /v2
        pathType: ImplementationSpecific
        backend:
          service:
            name: mongo-express-service
            port:
              number: 81
